<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kata_chamooch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_morning_off"
        android:name="com.kata_chamooch.ui.morning.MorningOffFragment"
        android:label="@string/title_morning_off"
        tools:layout="@layout/fragment_morning_off" />

    <fragment
        android:id="@+id/navigation_dinner_off"
        android:name="com.kata_chamooch.ui.dinner.DinnerOffFragment"
        android:label="@string/title_dinner_off"
        tools:layout="@layout/fragment_dinner_off" />

    <fragment
        android:id="@+id/navigation_personalise"
        android:name="com.kata_chamooch.ui.personalise.PersonaliseFragment"
        android:label="@string/title_personalise"
        tools:layout="@layout/fragment_personalise" />

    <fragment
        android:id="@+id/navigation_bazar"
        android:name="com.kata_chamooch.ui.bazar.BazarFragment"
        android:label="@string/title_bazar"
        tools:layout="@layout/fragment_bazar" />
</navigation>